more review questions

--- a/content/11_review.html
+++ b/content/11_review.html
@@ -34,11 +34,32 @@
 
 <li class="expression vspace2" mathjax=functions vars="a=45; b=5; c=3"
     exp="Flour Bakery sells rolls for prn(a,9) cents each. Bea wants to buy prn(b,5) rolls and she pays with prn(c,2) dollars. How much change does she get? Express your answer in Base 7.<br><br>
-    Answer: _prn( 100*c - a*b ,7) cents">
-</li> 
+    Answer: _prn( 100*c - a*b ,7) cents"></li> 
 
 <li class="expression vspace2" blank=10 vars="x=val('234_8'); y=val('345_8'); b=8"; 
     exp="prn(x,b) \times prn(y,b) = _prn(x*y,b)"></li>
+
+
+<li class="expression vspace2 page-break" vars="a=40; b=5; c=4; d=12; e=9; f=4; g=12" 
+    exp="(prn(a,5) - prn(b,4) \times prn(c,3)) \times \cfrac{ prn(d,2) - prn(e,3) }{ prn(f,4)^2 - prn(g,5) }"
+    operations="(a - b * c) * (d - e) / (f**2 - g)"></li>
+
+<li class="expression vspace2" baseFormat=none
+    vars="x=val('234_8'); y=val('121_8'); b=8;" 
+    exp="prn(x,b) - prn(y,b) = prn(x - y, b). \text{ This equation is in Base } _prn(b)"></li>
+
+<li class="expression series vspace2" len=6 hints=[0,1,2,3] exp="_prn((1+n*4),6)"></li>
+
+<li class="expression vspace2" blank=8 vars="x=80" exp="prn(x,5) = _prn(x,3)"></li>
+
+<li class="expression vspace2" mathjax=functions vars="a=12; b=15;" blank=10
+    exp="One box of Devo Delight Donuts contains prn(a,3) donuts. Each donut contains prn(b,4) grams of fat. For dinner, Devon devoured all the donuts in the box. How much fat did he eat? Express your answer in Base Deux (two).<br><br> 
+    Answer: _prn( a * b, 2) grams"></li> 
+
+<li class="expression vspace2" blank=10 vars="x=val('135_7'); y=val('531_7'); b=7"; 
+    exp="prn(x,b) \times prn(y,b) = _prn(x*y,b)"></li>
+
+
 
 </ol>
 </div>
