school name change, simple addition, made some sequences easier

--- a/content/01_counting.html
+++ b/content/01_counting.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases 1: Counting</h1>
+<h1>CCS Math League Bases 1: Counting</h1>
 <table class="student-info"></table>
 <div class="main">
 
@@ -53,7 +53,7 @@
 </li>
 
 <li>Fill in this Base 10 sequence:
-  <p class="expression indent1 series" len=17 exp="_sub('$',n)" hints=[3,4,12,16] ></p></li>
+  <p class="expression indent1 series" len=15 exp="_sub('$',n)" hints=[0,3,4,12,14] ></p></li>
 </ol>
 
 
@@ -81,7 +81,7 @@
 <li>Let's go back to Base 5. In Base 5, the largest number you can make with one digit is: 
   <span class="expression" exp="_echo(4)" ></span>.</li>
 
-<p>To write a number that is ONE MORE than 4, we have to use 
+<p class="page-break">To write a number that is ONE MORE than 4, we have to use 
   <span class="expression" exp="_echo(2)" ></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. To know we mean Base 5, we write \( 10_{(5)} \)</p>
@@ -103,59 +103,86 @@
 
 </ol>
 
+<h2>Basic Addition</h2>
+
+<p>Easy addition, but bases make it trickier.</p>
+
+<table style='width:100%'><tr>
+<td><p class="expression" vars="b=5; x=3; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=5; x=4; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=5; x=2; y=2" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=5; x=3; y=2" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+
+</tr><tr>
+
+<td><p class="expression" vars="b=4; x=3; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=3; x=2; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=2; x=1; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=5; x=4; y=2" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+
+</tr><tr>
+
+<td><p class="expression" vars="b=4; x=7; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=5; x=19; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=6; x=35; y=1" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+<td><p class="expression" vars="b=7; x=47; y=2" exp="prn(x,b) + prn(y) = _prn(x+y,b)"></p></td>
+
+</tr></table>
+
 <h2>Practice</h2>
 <p>Fill in these sequences. They all increment by 1.</p>
 
 <ol>
 <li>Fill in this sequence using Base 3:</li>
-<p class="expression series" len=12 exp="_prn(n,3)" hints=[0,1,3,7] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n,3)" hints=[0,1,3,7] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="expression series" len=12 exp="_prn(n,7)" hints=[0,2,5,9] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n,7)" hints=[0,2,5,9] ></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="expression series" len=12 exp="_prn(n+4,6)" hints=[0,1,5,8] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n+4,6)" hints=[0,1,5,8] ></p> 
 
 <li>Fill in this sequence using Base 2:</li>
-<p class="expression series" len=12 exp="_prn(n,2)" hints=[0,1,2,5,8] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n,2)" hints=[0,1,2,5,8] ></p> 
 
 <li>Fill in this sequence using Base 4:</li>
-<p class="expression series" len=12 exp="_prn(n+15,4)" hints=[0,1,5,10] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n+15,4)" hints=[0,1,5,10] ></p> 
 
 <li>Fill in this sequence using Base 8:</li>
-<p class="expression series" len=12 exp="_prn(n+45,8)" hints=[0,1,2,10] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n+45,8)" hints=[0,1,2,10] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression series" len=12 exp="_prn(n+29,5)" hints=[0,1,2,6] ></p> 
+<p class="expression series indent1" len=12 exp="_prn(n+29,5)" hints=[0,1,2,6] ></p> 
 </ol>
 
-<h2>More Practice</h2>
-<p>Now things get a bit harder. These sequences increment by more than 1.</p>
+
+
+
+<h2 class="page-break">Challenge Problems</h2>
+
+<p>These sequences increment by more than 1.</p>
 
 <ol>
 <li>Fill in this sequence using Base 10:</li>
-<p class="expression series" len=12 exp="_prn(2*n,10)" hints=[2,4,7,11] ></p> 
+<p class="expression series indent1" len=10 exp="_prn(2*n+1,10)" hints=[0,1,4,7,9] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression series" len=12 exp="_prn(2*n,5)" hints=[2,4,7,11] ></p> 
-
-<li>Fill in this sequence using Base 3:</li>
-<p class="expression series" len=12 exp="_prn(10+2*n,3)" hints=[2,4,7,11] blank=6></p> 
-
-<li>Fill in this sequence using Base 4:</li>
-<p class="expression series" len=12 exp="_prn(3*n,4)" hints=[0,4,5,11] ></p> 
-
-<li>Fill in this sequence using Base 2:</li>
-<p class="expression series" len=9 exp="_prn(3*n,2)" hints=[0,3,4,8] blank=6></p> 
+<p class="expression series indent1" len=10 exp="_prn(2*n+1,5)" hints=[0,1,4,7,9] ></p> 
 
 <li>Fill in this sequence using Base 6:</li>
-<p class="expression series" len=12 exp="_prn(3*n+6,6)" hints=[0,2,7,11] ></p> 
+<p class="expression series indent1" len=10 exp="_prn(3*n+1,6)" hints=[0,1,2,7,9] ></p> 
+
+<li>Fill in this sequence using Base 4:</li>
+<p class="expression series indent1" len=10 exp="_prn(3*n,4)" hints=[0,2,4,5,9] ></p> 
 
 <li>Fill in this sequence using Base 7:</li>
-<p class="expression series" len=12 exp="_prn(4*n,7)" hints=[2,4,7,11] ></p> 
+<p class="expression series indent1" len=10 exp="_prn(4*n,7)" hints=[1,2,4,7,9] ></p> 
 
 <li>Fill in this sequence using Base 5:</li>
-<p class="expression series" len=12 exp="_prn(4*n+8,5)" hints=[0,6,8,11] ></p> 
+<p class="expression series indent1" len=10 exp="_prn(4*n+8,5)" hints=[0,2,6,8,9] ></p> 
+
+<li>Fill in this sequence using Base 3:</li>
+<p class="expression series indent1" len=10 exp="_prn(2*n+10,3)" hints=[0,2,4,7,9] blank=6></p> 
 
 </ol>
 
