--- a/content/01_counting.html
+++ b/content/01_counting.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>CCS Math League Bases 1: Counting</h1>
+<h1>Bases 1: Counting</h1>
 <table class="student-info"></table>
 <div class="main">
 
