remove flex - it was messing up printing

--- a/content/01_counting.html
+++ b/content/01_counting.html
@@ -81,7 +81,7 @@
 <li>Let's go back to Base 5. In Base 5, the largest number you can make with one digit is: 
   <span class="expression" exp="_echo(4)" ></span>.</li>
 
-<p class="page-break">To write a number that is ONE MORE than 4, we have to use 
+<p>To write a number that is ONE MORE than 4, we have to use 
   <span class="expression" exp="_echo(2)" ></span> digits.<br>
   And that number, 4 + 1, is written like this: 10.<br>
   It looks like TEN. But it means FIVE. To know we mean Base 5, we write \( 10_{(5)} \)</p>
