--- a/content/02_exp_tobase10.html
+++ b/content/02_exp_tobase10.html
@@ -95,12 +95,9 @@
 <li>Convert \( 325_{(7)} \) to Base 10</li>
 <table class="base-chart" num=325_7 top=none ></table>
 
-<li>Convert \( 702_{(8)} \) to Base 10</li>
-<table class="base-chart" num=702_8 top=none ></table>
-
 </ol>
 
-<h2>More Exponents Practice</h2>
+<h2 class="page-break">More Exponents Practice</h2>
 
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \).<br>
   HINT: look at your answers from page 1.</p>
