--- a/content/03_littleboxes.html
+++ b/content/03_littleboxes.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases 4: Little Boxes</h1>
+<h1>Bases 3: Little Boxes</h1>
 
 <table class="student-info"></table>
 <div class="main">
