fixed More Exponent Practice

--- a/content/02_exp_tobase10.html
+++ b/content/02_exp_tobase10.html
@@ -100,14 +100,16 @@
 <h2 class="page-break">More Exponents Practice</h2>
 
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \).<br>
-  HINT: look at your answers from page 1.</p>
+  HINT: look at your answers from page 1.<br>
+  Do not give the "trivial" answer with exponent of 1, like  \( 9 =  9^1\)
+</p>
 
 <table style='width:100%'><tr><td>
 <ol>
 <li class="expression vspace1" exp="prn(10**2) = _echo('10^2')" ></li>
 <li class="expression vspace1" exp="prn(2**4) = _echo('2^4') \text{ or } _echo('4^2')" ></li>
 <li class="expression vspace1" exp="prn(9**3) = _echo('9^3')" ></li>
-<li class="expression vspace1" exp="prn(3**2) = _echo('3^2') \text{ or } _echo('9^1')" ></li>
+<li class="expression vspace1" exp="prn(3**2) = _echo('3^2')" ></li>
 <li class="expression vspace1" exp="prn(2**5) = _echo('2^5')" ></li>
 <li class="expression vspace1" exp="prn(2**6) = _echo('2^6') \text{ or } _echo('4^3') \text{ or } _echo('8^2')" ></li>
 <li class="expression vspace1" exp="prn(5**3) = _echo('5^3')" ></li>
@@ -118,7 +120,7 @@
 <ol>
 <li class="expression vspace1" exp="prn(2**3) = _echo('2^3')" ></li>
 <li class="expression vspace1" exp="prn(5**2) = _echo('5^2')" ></li>
-<li class="expression vspace1" exp="prn(8**3) = _echo('8^3')" ></li>
+<li class="expression vspace1" exp="prn(8**3) = _echo('8^3') \text{ or } _echo('2^9')" ></li>
 <li class="expression vspace1" exp="prn(6**2) = _echo('6^2')" ></li>
 <li class="expression vspace1" exp="prn(3**4) = _echo('3^4') \text{ or } _echo('9^2')" ></li>
 <li class="expression vspace1" exp="prn(7**2) = _echo('7^2')" ></li>
