add review and challenge problems

--- a/content/03_littleboxes.html
+++ b/content/03_littleboxes.html
@@ -211,6 +211,86 @@ is <strong>WRONG</strong> because you can't have
 
 </ol>
 
+
+<h2 class="page-break">Review Problems</h2>
+
+<p>Exponents</p>
+
+<table style='width:100%'><tr><td>
+<ol>
+<li class="expression vspace1" exp="8^3 = _prn(8**3)" blank=8></li>
+<li class="expression vspace1" exp="4^4 = _prn(4**4)" blank=8></li>
+<li class="expression vspace1" exp="2^4 = _prn(2**4)" blank=8></li>
+<li class="expression vspace1" exp="9^3 = _prn(9**3)" blank=8></li>
+<li class="expression vspace1" exp="4^3 = _prn(4**3)" blank=8></li>
+<li class="expression vspace1" exp="6^3 = _prn(6**3)" blank=8></li>
+</ol>
+</td><td>
+<ol>
+<li class="expression vspace1" exp="7^3 = _prn(7**3)" blank=8></li>
+<li class="expression vspace1" exp="2^6 = _prn(2**6)" blank=8></li>
+<li class="expression vspace1" exp="3^4 = _prn(3**4)" blank=8></li>
+<li class="expression vspace1" exp="3^3 = _prn(3**3)" blank=8></li>
+<li class="expression vspace1" exp="2^5 = _prn(2**5)" blank=8></li>
+</ol>
+</td></tr></table>
+
+<p>Convert to Base 10</p>
+
+<ol>
+<li class="expression vspace2" vars="x=55;" exp="prn(x, 6) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=77;" exp="prn(x, 3) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=99;" exp="prn(x, 5) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=123;" exp="prn(x, 9) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=456;" exp="prn(x, 8) = _prn(x, 10)" blank=8 ></li>
+</ol>
+
+<p>Fill in the sequences in the correct Base</p>
+
+<ol>
+<li class="expression series vspace2" len=10 exp="_prn(2*n+1,4)" hints=[0,1,4,7,9] ></li> 
+<li class="expression series vspace2" len=10 exp="_prn(2*n+1,5)" hints=[0,1,4,7,9] ></li> 
+</ol>
+
+
+<h2>Challenge Problems</h2>
+
+
+<table style='width:100%'><tr><td>
+<ol>
+<li class="expression vspace1" exp="2^7 = _prn(2**7)" blank=8></li>
+<li class="expression vspace1" exp="8^4 = _prn(8**4)" blank=8></li>
+<li class="expression vspace1" exp="4^5 = _prn(4**5)" blank=8></li>
+<li class="expression vspace1" exp="5^4 = _prn(5**4)" blank=8></li>
+<li class="expression vspace1" exp="11^2 = _prn(11**2)" blank=8></li>
+<li class="expression vspace1" exp="3^5 = _prn(3**5)" blank=8></li>
+</ol>
+</td><td>
+<ol>
+<li class="expression vspace1" exp="6^4 = _prn(6**4)" blank=8></li>
+<li class="expression vspace1" exp="12^2 = _prn(12**2)" blank=8></li>
+<li class="expression vspace1" exp="5^5 = _prn(5**5)" blank=8></li>
+<li class="expression vspace1" exp="7^4 = _prn(7**4)" blank=8></li>
+<li class="expression vspace1" exp="9^4 = _prn(9**4)" blank=8></li>
+<li class="expression vspace1" exp="13^2 = _prn(13**2)" blank=8></li>
+</ol>
+</td></tr></table>
+
+<ol>
+<li class="expression vspace2" vars="x=789;" exp="prn(x, 2) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=1234;" exp="prn(x, 5) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=val('2018_9');" exp="prn(x, 9) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=2018;" exp="prn(x, 7) = _prn(x, 10)" blank=8 ></li>
+<li class="expression vspace2" vars="x=2018;" exp="prn(x, 4) = _prn(x, 10)" blank=8 ></li>
+</ol>
+
+<ol>
+<li class="expression series vspace2" len=10 exp="_prn(3*n+33,4)" hints=[0,2,4,5,9] ></li> 
+<li class="expression series vspace2" len=10 exp="_prn(4*n+49,7)" hints=[1,2,4,7,9] ></li> 
+<li class="expression series vspace2" len=10 exp="_prn(4*n+39,5)" hints=[0,2,6,9] ></li> 
+<li class="expression series vspace2" len=10 exp="_prn(2*n+65,3)" hints=[0,2,4,7,9] blank=6></li> 
+</ol>
+
 </div>
 </body>
 </html>
