rename and small adjustments

--- a/content/04_frombase10.html
+++ b/content/04_frombase10.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases 5: Converting from Base 10</h1>
+<h1>Bases 4: Converting from Base 10</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -68,7 +68,7 @@
 <li class="expression" exp="prn(65,10) = _prn(65,7)" ></li>
 <table class="base-chart" num=65:7 top=exponents ></table>
 
-<li class="expression" exp="prn(89,10) = _prn(89,5)" ></li>
+<li class="expression page-break" exp="prn(89,10) = _prn(89,5)" ></li>
 <table class="base-chart" num=89:5 top=none ></table>
 
 <li class="expression" exp="prn(14,10) = _prn(14,2)" ></li>
@@ -121,7 +121,7 @@
 
 <li class="expression series vspace2" len=7 exp="sub('{2}^{$}', 2*n) = _prn(2**(2*n))" ></li>
 <li class="expression vspace2" vars="x=343" exp="prn(x, 2) = _prn(x, 10) = _prn(x, 7)" blank=12 ></li>
-<li class="expression series vspace2" len=12 exp="_prn(24-2*n,4)" hints=[0,4,5,11] ></li> 
+<li class="expression series vspace2" len=10 exp="_prn(24-2*n,4)" hints=[0,4,5,9] ></li> 
 <li class="expression series vspace2" len=7 exp="sub('{4}^{$}', n) = _prn(4**n)" ></li>
 <li class="expression vspace2" vars="x=157" exp="prn(x, 2) = _prn(x, 4)" blank=12 ></li>
 <li class="expression series vspace2" len=7 exp="sub('{3}^{$}', n) = _prn(3**n)" ></li>
