--- a/content/05_addsub.html
+++ b/content/05_addsub.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases 6: Addition and Subtraction</h1>
+<h1>Bases 5: Addition and Subtraction</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -81,7 +81,7 @@
 <p>Then, \(5 + 1 = 6\). And \(6 - 3 = 3\).</p>
 
 
-<h2>Subtraction Practice</h2>
+<h2 class="page-break">Subtraction Practice</h2>
 
 <table style='width:100%'><tr>
 <td><p class="expression" exp="_longsub([13, 6], 4)"></p></td>
@@ -117,7 +117,6 @@
 <li class="expression series vspace1" len=7  exp="sub('{2}^$', n) = _prn(2**n)" ></li>
 <li class="expression series vspace1" len=4  exp="sub('{2}^{$}', n+7) = _prn(2**(n+7))" ></li>
 <li class="expression series vspace1" len=7  exp="sub('{3}^$', n) = _prn(3**n)" ></li>
-<li class="expression series vspace1" len=5  exp="sub('{5}^$', n) = _prn(5**n)" ></li>
 <li class="expression series vspace1" len=4  exp="sub('{9}^$', n) = _prn(9**n)" ></li>
 
 <p>Fill in the series:</p>
