--- a/content/meet_2001_2.html
+++ b/content/meet_2001_2.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League 2001: Meet 2</h1>
+<h1>Math League 2001: Bases Meet 2</h1>
 <table class="student-info"></table>
 
 <div class="content main">
