--- a/content/meet_2015_1.html
+++ b/content/meet_2015_1.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League 2015: Meet 1</h1>
+<h1>Math League 2015: Bases Meet 1</h1>
 <table class="student-info"></table>
 
 <div class="content main">
