--- a/content/meet_2017_3.html
+++ b/content/meet_2017_3.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League 2017: Meet 3</h1>
+<h1>Math League 2017: Bases Meet 3</h1>
 <table class="student-info"></table>
 
 <div class="content main">
