--- a/content/test.html
+++ b/content/test.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Test</h1>
+<h1>Math League Bases: Test</h1>
 
 <table class="student-info"></table>
 <div class="main">
