--- a/content/06_from10_2_findbase.html
+++ b/content/06_from10_2_findbase.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases 7: Converting from Base 10, Type 2</h1>
+<h1>Bases 6: From Base 10 (Type 2) and "Find the Base"</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -27,7 +27,7 @@
 <p><strong>Step1:</strong> Divide 678 by 7:
 <span class="expression top-align" exp="longdiv(678, 7)"></span></p>
 
-<p class="indent1">The quotient is <span class="expression" exp="_prn(96)"></span>. The remainder is <span class="expression" exp="_prn(6)"></span>. This remainder is the last digit of the answer: ___\( 6_{(7)} \)</p>
+<p class="indent1">The quotient is <span class="expression" exp="_prn(96)"></span>. The remainder is <span class="expression" exp="_prn(6)"></span>. This remainder is the right-most digit of the answer: ___\( 6_{(7)} \)</p>
 
 <p><strong>Step2:</strong> Use the quotient from the previous step (96) and divide by 7:
 <span class="expression top-align" exp="longdiv(96, 7)"></span></p>
@@ -47,7 +47,7 @@
 <p>When the quotient is 0, you are done. The answer is 
 <span class="expression" exp="prn(678,10) = prn(678,7)">.</span></p>
 
-<h2 class="page-break">Practice</h2>
+<h2>Practice</h2>
 <ol>
 <li class="expression" blank=8 vars="x='321_5'" exp="prn(x,10) = _prn(x,5)"></li>
 <p class="indent1 from10type2" num=321_5 base=5></p>
@@ -60,8 +60,7 @@
 
 <p>Solve with Type 2 (Long Division, Right-to-Left). Then check your answer with Type 1 (Base Chart, Left-to-Right):</p>
 
-<li class="expression" blank=8 vars="x=777" exp="prn(x,10) = _prn(x,7)"></li>
-<li class="expression vspace2" blank=8 vars="x=9090" exp="prn(x,10) = _prn(x,9)"></li>
+<li class="expression vspace2" blank=8 vars="x=777" exp="prn(x,10) = _prn(x,7)"></li>
 <li class="expression vspace2" blank=8 vars="x='10201_6'" exp="prn(x,10) = _prn(x,6)"></li>
 
 </ol>
@@ -74,7 +73,7 @@
    <span class="expression" baseFormat=question vars="x=val('103_5'); y=val('113_5'); b=5;" 
         exp="prn(x,b) + prn(y,b) = prn(x+y,b)"></span>.</p>
 
-<p><strong>Step 1:</strong> The base must be greater than any digit you see. So the base must be at least <span class="expression" exp="_prn(4)"></span>.</p>
+<p><strong>Step 1:</strong> The base must be greater than any digit you see. So the base is at least <span class="expression" exp="_prn(4)"></span>.</p>
 
 <p><strong>Step 2:</strong> Add the one's place digits: 
     <span class="expression" exp="3+3=_prn(6,10)"></span>.</p>
@@ -127,7 +126,7 @@
     exp="prn(x,b) - prn(y,b) - prn(z,b) = prn(x - y - z, b). \text{ Base is } _prn(b)"></li>
 </ol>
 
-<h2>Review</h2>
+<h2 class="page-break">Review</h2>
 <ol>
 
 
@@ -135,13 +134,13 @@
     exp="sub('{8}^$', n) = _prn(8**n)" ></li>
 
 <li class="expression vspace2" blank=8
-    vars="x=2018" exp="prn(x, 10) = _prn(x, 8)" ></li>
+    vars="x=2019" exp="prn(x, 10) = _prn(x, 8)" ></li>
 
 <li class="expression series vspace1" len=4
     exp="sub('{9}^$', n) = _prn(9**n)" ></li>
 
 <li class="expression vspace2" blank=8
-    vars="x='2018_9'" exp="prn(x, 9) = _prn(x, 10)" ></li>
+    vars="x=2019" exp="prn(x, 9) = _prn(x, 10)" ></li>
 
 <li class="expression series vspace1" len=5
     exp="_prn(2*n+1, 3)" hints=[0,1,2] ></li>
@@ -150,7 +149,7 @@
     exp="prn(x,b) + prn(y,b) + prn(z,b) = _prn(x+y+z,b)"></li>
 
 <li class="expression vspace2" blank=8
-    vars="x=2018" exp="prn(x, 7) = _prn(x, 10)" ></li>
+    vars="x=2019" exp="prn(x, 7) = _prn(x, 10)" ></li>
 
 <li class="expression vspace2" baseFormat=simple blank=8
     vars="x='101010101_2'" exp="prn(x, 2) = _prn(x, 8)" ></li>
