--- a/content/05_addsub.html
+++ b/content/05_addsub.html
@@ -49,12 +49,12 @@
 <p>Some basic addition problems</p>
 
 <table style='width:100%'><tr>
-<td><p class="expression" exp="_longadd([13, 6], 5)"></p></td>
+<td><p class="expression vspace2" exp="_longadd([13, 6], 5)"></p></td>
 <td><p class="expression" exp="_longadd([15, 9], 6)"></p></td>
 <td><p class="expression" exp="_longadd([53, 265], 7)"></p></td>
 <td><p class="expression" exp="_longadd([53, 378], 8)"></p></td>
 </tr><tr>
-<td><p class="expression" exp="_longadd([15, 10], 4)"></p></td>
+<td><p class="expression vspace2" exp="_longadd([15, 10], 4)"></p></td>
 <td><p class="expression" exp="_longadd([24, 14], 5)"></p></td>
 <td><p class="expression" exp="_longadd([55, 97], 6)"></p></td>
 <td><p class="expression" exp="_longadd([159, 244], 7)"></p></td>
@@ -63,7 +63,7 @@
 <p>Lots of digits in low bases</p>
 
 <table style='width:100%'><tr>
-<td><p class="expression" exp="_longadd([6, 13], 2)"></p></td>
+<td><p class="expression vspace2" exp="_longadd([6, 13], 2)"></p></td>
 <td><p class="expression" exp="_longadd([26, 26], 3)"></p></td>
 <td><p class="expression" exp="_longadd([15, 13], 2)"></p></td>
 <td><p class="expression" exp="_longadd([89, 147], 3)"></p></td>
@@ -84,12 +84,12 @@
 <h2 class="page-break">Subtraction Practice</h2>
 
 <table style='width:100%'><tr>
-<td><p class="expression" exp="_longsub([13, 6], 4)"></p></td>
+<td><p class="expression vspace2" exp="_longsub([13, 6], 4)"></p></td>
 <td><p class="expression" exp="_longsub([15, 9], 6)"></p></td>
 <td><p class="expression" exp="_longsub([265, 53], 8)"></p></td>
 <td><p class="expression" exp="_longsub([378, 62], 9)"></p></td>
 </tr><tr>
-<td><p class="expression" exp="_longsub([25, 10], 5)"></p></td>
+<td><p class="expression vspace2" exp="_longsub([25, 10], 5)"></p></td>
 <td><p class="expression" exp="_longsub([25, 10], 4)"></p></td>
 <td><p class="expression" exp="_longsub([30, 14], 3)"></p></td>
 <td><p class="expression" exp="_longsub([29, 18], 2)"></p></td>
@@ -124,7 +124,7 @@
 <li class="expression series vspace1" len=5 exp="_prn(3*n+1, 8)" hints=[0,1,2] ></li> 
 <li class="expression series vspace1" len=5 exp="_prn(5*n+5, 4)" hints=[0,1,2] ></li> 
 
-<p class="page-break">Convert:</p>
+<p>Convert:</p>
 <li class="expression vspace2" vars="x=300" exp="prn(x, 7) = _prn(x, 10)" blank=8 ></li>
 <li class="expression vspace2" vars="x=200" exp="prn(x, 6) = _prn(x, 10)" blank=8 ></li>
 
@@ -142,7 +142,7 @@
     vars="x='1234_7'" exp="prn(x, 7) = _prn(x, 9)" ></li>
 
 <table style='width:100%'><tr>
-<td><li class="expression" exp="_longadd([17, 29, 35, 47], 4)"></li></td>
+<td><li class="expression vspace2" exp="_longadd([17, 29, 35, 47], 4)"></li></td>
 <td><li class="expression" exp="_longsub([97, 55], 2)"></li></td>
 <td><li class="expression" exp="_longsub([916, 530], 9)"></li></td>
 </tr></table>
