--- a/content/08_wordproblems.html
+++ b/content/08_wordproblems.html
@@ -12,14 +12,14 @@
 
 <body>
 
-<h1>Devotion Math League Bases 9: Word Problems, Calculators</h1>
+<h1>Bases 8: Word Problems, Calculators</h1>
 
 <table class="student-info"></table>
 <div class="main">
 
 <p>Word problems in Bases have two parts. Convert the numbers to Base 10, then do some operation based on the problem. For example:</p>
 
-<p class="indent1">Alitza worked \( 15_6 \) hours and was paid \( 110_8 \) cents per hour. What were Alitza's total earnings (in cents)?</p>
+<p class="indent1">Bea worked \( 15_6 \) hours and was paid \( 110_8 \) cents per hour. What were Bea's total earnings (in cents)?</p>
 
 <p><strong>Step 1:</strong> Convert.</p>
 <p class="expression indent1" vars="x='15_6'" exp="prn(x, 6) = _prn(x,10)"></p>
@@ -38,17 +38,17 @@
 </li> 
 
 <li class="expression vspace1" mathjax=functions vars="a=750; b=30;" 
-    exp="Aarush bought a box of cookies that has a total of prn(a,3) grams of sugar. There are prn(b,7) cookies in the box. How many grams of sugar are in one cookie?<br><br>
+    exp="Rose bought a box of cookies that has a total of prn(a,3) grams of sugar. There are prn(b,7) cookies in the box. How many grams of sugar are in one cookie?<br><br>
     Answer: _prn( a/b )">
 </li> 
 
 <li class="expression vspace1" mathjax=functions vars="a=12; b=16; c=20; d=24;" blank=12
-    exp="Eurkia Games just got a collection Pokemon figures. Hadley, who just got her first job at Eurkia, must arrange them on the shelf from shortest to tallest. Pikachu is prn(b,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(c,3) inches tall. In what order does Hadley arrange the Pokemon?<br><br>
+    exp="Eurkia Games just got a collection Pokemon figures. Ercole, who just got his first job at Eurkia, must arrange them on the shelf from shortest to tallest. Pikachu is prn(b,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(c,3) inches tall. In what order does Ercole arrange the Pokemon?<br><br>
     Answer: _echo('Rattata'), _echo('Pikachu'), _echo('Oshawott'), _echo('Snivy')">
 </li>
 
 <li class="expression vspace1" mathjax=functions vars="a=9; b=13; c=10;" 
-    exp="Zoe shoveled snow from her neighbors' sidewalk to make some extra money. She averaged $prn(a,7) per sidewalk. She shoveled prn(b,3) sidewalks after one snowstorm and prn(c,5) sidewalks after another snowstorm. How much money did Zoe make?<br><br>
+    exp="Oscar shoveled snow from his neighbors' sidewalk to make some extra money. He averaged $prn(a,7) per sidewalk. He shoveled prn(b,3) sidewalks after one snowstorm and prn(c,5) sidewalks after another snowstorm. How much money did Oscar make?<br><br>
     Answer: $_prn( a * (b+c) ) ">
 </li> 
 
@@ -57,7 +57,7 @@
 <ol>
 
 <li class="expression vspace1" mathjax=functions vars="a=105; b=21;"
-    exp="Eric had a Lego spaceship set with prn(a,6) pieces. Every day, he added prn(b,8) pieces to the spaceship. How many days did it take Eric to finsh? Express your answer in Base 2.<br><br>
+    exp="Ella had a Lego spaceship set with prn(a,6) pieces. Every day, she added prn(b,8) pieces to the spaceship. How many days did it take Ella to finsh? Express your answer in Base 2.<br><br>
     Answer: _prn(a/b, 2)">
 </li>
 
@@ -88,7 +88,7 @@
 <p class="expression indent1 vspace2" blank=8 vars="a='12345_6';" exp="prn(a,10) = _prn(a,6)">
 
 <h3>From Base 10, Type 2 (Right-to-Left)</h3>
-<p>For Type 2, use a calculator to divide by the target Base. The tricky part is converting the remainder from a decimal to a remainder:</p>
+<p>For Type 2, use a calculator to divide by the target Base. The tricky part is converting the remainder from a decimal to an integer:</p>
 
 <p class="expression indent1" vars="a=8*217+2;" exp="prn(a) \div 8 = _echo(a/8)"></p>
 <p class="expression indent1" mathjax=functions exp="The integer part is _echo(217) and the decimal part is _echo(0.25)"></p>
