--- a/content/09_bigbases.html
+++ b/content/09_bigbases.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases A: Bases Larger Than 10</h1>
+<h1>Bases 9: Bases Larger Than 10</h1>
 
 <table class="student-info"></table>
 <div class="main">
