--- a/content/09_bigbases.html
+++ b/content/09_bigbases.html
@@ -20,7 +20,7 @@
 <h2>Big Bases</h2>
 
 <p>Bases can go bigger than 10! We will look at bases that go up to Base 16.<br>
-We need symbols for values bigger than 10. We use the letters A, B, C, D, E, and F.</p>
+We need symbols for a single digit that is bigger than 10. We use the letters A, B, C, D, E, and F.</p>
 <br>
 <table class="basic-table">
 <tr><td>symbol</td> <td>value</td></tr>
@@ -45,7 +45,7 @@ We need symbols for values bigger than 10. We use the letters A, B, C, D, E, and
 <p class="expression series indent1 vspace1" len=10 exp="_prn(164+n,13)" hints=[0,1,2,7]>
 
 
-<h2>Converting to Base 10</h2>
+<h2 class="page-break">Converting to Base 10</h2>
 
 Use a Base Chart to convert to Base 10, just like before.
 
@@ -53,7 +53,7 @@ Use a Base Chart to convert to Base 10, just like before.
 <li>Convert \( 111_{(12)} \) to Base 10</li>
 <table class="base-chart" num=111_12 top=both ></table>
 
-<li class="page-break">Convert \( 97_{(14)} \) to Base 10</li>
+<li>Convert \( 97_{(14)} \) to Base 10</li>
 <table class="base-chart" num=97_14 top=both ></table>
 
 <li>Convert \( \text{CA}_{(13)} \) to Base 10</li>
@@ -86,12 +86,12 @@ Use a Base Chart to convert to Base 10, just like before.
 
 <p>Some Long Addition Problems:</p>
 
-<table class="vspace1" style='width:100%'><tr>
+<table class="vspace2" style='width:100%'><tr>
 <td><p class="expression" exp="_longadd([26, 26], 15)"></p></td>
 <td><p class="expression" exp="_longadd([30, 13], 11)"></p></td>
 </tr></table>
 
-<table class="vspace1" style='width:100%'><tr>
+<table class="vspace2" style='width:100%'><tr>
 <td><p class="expression" exp="_longadd([89, 147], 13)"></p></td>
 <td><p class="expression" exp="_longadd([111, 139], 12)"></p></td>
 </tr></table>
