--- a/content/10_review.html
+++ b/content/10_review.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases B: Review</h1>
+<h1>Bases A: Review</h1>
 
 <table class="student-info"></table>
 <div class="main">
