--- a/content/11_bigbases.html
+++ b/content/11_bigbases.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases B: More Big Bases!</h1>
+<h1>Bases B: More Big Bases!</h1>
 
 <table class="student-info"></table>
 <div class="main">
