--- a/content/13_review.html
+++ b/content/13_review.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases D: Review</h1>
+<h1>Bases D: Review</h1>
 
 <table class="student-info"></table>
 <div class="main">
