--- a/content/08_wordproblems.html
+++ b/content/08_wordproblems.html
@@ -43,7 +43,7 @@
 </li> 
 
 <li class="expression vspace1" mathjax=functions vars="a=12; b=16; c=20; d=24;" blank=12
-    exp="Eurkia Games just got a collection Pokemon figures. Ercole, who just got his first job at Eurkia, must arrange them on the shelf from shortest to tallest. Pikachu is prn(b,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(c,3) inches tall. In what order does Ercole arrange the Pokemon?<br><br>
+    exp="Eurika Games just got a collection Pokemon figures. Ercole, who just got his first job at Eurika, must arrange them on the shelf from shortest to tallest. Pikachu is prn(b,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(c,3) inches tall. In what order does Ercole arrange the Pokemon?<br><br>
     Answer: _echo('Rattata'), _echo('Pikachu'), _echo('Oshawott'), _echo('Snivy')">
 </li>
 
